layout and style changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,8 @@ body {
 .accent-btn {
     text-shadow: 1px 1px 3px black;
 }
+
+.card-deck {
+    box-shadow: 2px 2px 8px black;
+    background-color: #007BFF;
+}
